storing token in Local storage with andularjs

--- a/FundooApp/Pages/register.html
+++ b/FundooApp/Pages/register.html
@@ -36,7 +36,7 @@
                         <br/>
                         <div> </div>
                         <div class='b-Links'>
-                            <a href="#" class='sign-In-Link'>Sign in instead</a>
+                            <a href="/FundooApp/Pages/LoginPage/login.html" class='sign-In-Link'>Sign in instead</a>
                             <Button class="nextButton" type="submit" ng-click="postdata(firstName,lastName,email,password)">Next</Button>
                         </div>
                 </div>
