--- a/FundooApp/Pages/LoginPage/login.html
+++ b/FundooApp/Pages/LoginPage/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="login.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <script src="ngStorage.js"></script>
 </head>
 <body>
     <div class='headerOfSignIn' ng-app="postserviceapp" ng-controller="loginCtrl">
@@ -24,7 +25,7 @@
                
            </div>
            <div class='Bottom-Part'>
-               <a href="#" class='Link CreateAccount'>Create account</a>
+               <a href="../register.html" class='Link CreateAccount'>Create account</a>
                <Button class="Next" type="submit" ng-click="postdata(email,password)">Next</Button>
            </div>
         </div>
