working on list rendering and component

--- a/FundooApp/Pages/DashBoard/Dashboard.html
+++ b/FundooApp/Pages/DashBoard/Dashboard.html
@@ -7,6 +7,7 @@
     <title>DashBoard</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <link rel="stylesheet" href="DashBoard.css">
+
 </head>
 <body>
     <div class='main'>
@@ -60,17 +61,13 @@
           </div>
       </div>
       <div>
-        <notes-component></notes-component>
-        <notescomponent></NotesComponent>
+        <!-- <notescomponent></notesComponent> -->
       </div>
-      <!-- / -->
-      
-      <!-- / -->
-      <!-- <takeNoteOne></takeNoteOne> -->  
-        <!-- <TakeNOteTwo></TakeNOteTwo> -->
-   <!--  </ng-template> -->
  </div>
+ <notes-list></notes-list>
 </body>
 <!-- <script src="DashBoard.js"></script> -->
-<script src="../../Notes/Notes.component.js"></script>
+<script src="../../Notes/app.js"></script>
+<script src="../../Notes/notes-list.component.js"></script>
+
 </html>
