--- a/FundooApp/Pages/NavBar/NavBar.html
+++ b/FundooApp/Pages/NavBar/NavBar.html
@@ -6,18 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notes</title>
-    <link rel="stylesheet" href="Notes.css">
+    <link rel="stylesheet" href="NavBar.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <script src="app.js"></script>
-    <script src="notes-list.component.js"></script>
+    <script src="nav-list.component.js"></script>
 </head>
 
 <body>
 <div ng-controller="TakeNoteCtrl as note">
    <!--  <div class="TakeNotePopUp" ng-show="showButtons.includes(0)" ng-click="toggle1()"> -->
-    <div class="TakeNotePopUp" >
-        <div class="note part-takeNoteOne" ng-show="showButtons.includes(0)" ng-click="toggle1()">
+    <div class="TakeNotePopUp" ng-show="showButtons.includes(0)" ng-click="toggle1()">
+        <div class="part-takeNoteOne" >
             <input class='TakeANote' type="text" placeholder="Take a note..." size="50"  ></input>
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-square" viewBox="0 0 16 16">
                 <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
@@ -33,7 +33,7 @@
         </div>
    <!--  <ng-template #conditionFalse>  -->   
         <div class="part-takeNotetwo"  ng-show="showButtons.includes(1)">
-            <div class="note takeNotUp">
+            <div class="takeNotUp">
                 <input  class='TakeANote' placeholder="Title" size="70" ng-model="title"></input>
                 <img src='IsPinIcon.png' width='20'/>
             </div>
